welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:21: error: not found: value fairC
	fairC(Color.blue)
        ^PatternPicture:22: error: not found: value fairC
	fairC(Color.green)
        ^PatternPicture:23: error: not found: value fairC
	fairC(Color.yellow)
        ^