welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {

def faireC(c:Color){
	setCouleurBrosse(c);
	gauche();
	avance();
	baisseBrosse();
	leveBrosse();
	recule();
	droite();
	avance();
	baisseBrosse();
	leveBrosse();
	avance();
	avance();
	gauche();
}
for (x<- 1 to 3){
	faireC(Color.red)
	fairC(Color.blue)
	fairC(Color.green)
	fairC(Color.yellow)
}

}
